8.6.2 add captcha